# diff-risk-dashboard

./: .gitignore  .releaserc.json  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  README_USAGE_BLOCK.md  SECURITY.md  pyproject.toml  report.md  update_readme_usage.sh
.github/: .keep  FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge-dependabot.yml  build.yml  ci.yml  codeql.yml  dependabot-label.yml  main-audit.yml  nightly.yml  publish-on-semrel.yml  publish-pypi.yml  release-drafter.yml  release-publish.yml  release.yml  semantic-pr.yml  semantic-release.yml
_intel/: extras_readme.sh
docs/: MANUAL.md  USAGE.md
examples/: sample_apv.empty.json  sample_apv.json
src/diff_risk_dashboard/: __init__.py  cli.py  core.py  report.py  web.py
tests/: test_core.py  test_report_md.py  test_smoke.py
